# chess

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
assets/textures/: bishop_b.comp  bishop_w.comp  chess.comp  king_w.comp  knight_b.comp  knight_w.comp  pawn_b.comp  rook_b.comp  rook_w.comp
chess/: CMakeLists.txt
chess/assets/textures/: dot.comp  king_b.comp  pawn_w.comp  queen_b.comp  queen_w.comp
chess/inc/: board.h  cell.h  chess_piece.h  color.h  game.h  layer.h  player.h  queue.h  scoreboard.h  tex_list.h  text.h  texture.h  texture_mgr.h
chess/resources/: resource.rc
chess/src/: board.c  cell.c  chess_piece.c  color.c  context.c  game.c  main.c  player.c  queue.c  scoreboard.c  tex_list.c  text.c  texture.c  texture_mgr.c  utils.c
inc/: board.h  cell.h  chess_piece.h  color.h  context.h  entity.h  events.h  game.h  layer.h  player.h  private.h  queue.h  scoreboard.h  tex_list.h  text.h  texture.h  texture_mgr.h  utils.h
inc/math/: vec2.h
resources/: resource.res
src/: audio.c  board.c  cell.c  chess_piece.c  color.c  context.c  entity.c  events.c  game.c  main.c  player.c  queue.c  scoreboard.c  tex_list.c  text.c  texture.c  texture_mgr.c  utils.c
src/math/: vec2.c
